2005-06-22  Mike Kestner  <mkestner@novell.com>

	* sample/GtkDemo/DemoHyperText.cs : replace PersistentData usage that
	breaks on csc.
	* sample/GtkDemo/DemoTreeStore.cs : fix a 2.0 usage.

2005-06-22  Mike Kestner  <mkestner@novell.com>

	* generator/ManagedCallString.cs : don't assume ref for structs.
	* generator/VMSignature.cs : don't assume ref for structs.

2005-06-21  Mike Kestner  <mkestner@novell.com>

	* generator/ConstStringGen.cs : override ToNativeReturn ().
	* generator/ClassBase.cs : use fully qualified interface names for
	conflicting implementations.

2005-06-20  Mike Kestner  <mkestner@novell.com>

	* parser/gapi2xml.pl : fix const foo * const * fields/params.
	[Fixes #75266]

2005-06-17  Mike Kestner  <mkestner@novell.com>

	* Makefile.include : add included apis as deps on the generation
	target to force regen if dependency lib api changes.
	* pango/Analysis.custom : new custom to implement the ExtraAttrs
	property.  [Fixes #74668]
	* pango/Makefile.am : add new custom file.

2005-06-17  Mike Kestner  <mkestner@novell.com>

	* bootstrap : use assembly version 2.6.0.0.
	* bootstrap-2.4 : use assembly version 2.4.0.0.
	* configure.in.in : substitute the assembly version.

2005-06-14  Mike Kestner  <mkestner@novell.com>

	* gtk/Gtk.metadata : add nodes for all the *Set props on TextTag.
	[Fixes #75219]

2005-06-10  Dan Winship  <danw@novell.com>

	* parser/gapi2xml.pl (addPropElem): Distinguish CONSTRUCT ("must
	be set at construct time") and CONSTRUCT_ONLY ("can only be set at
	construct time") properties, rather than marking them all
	"construct-only".

	* gnome/gnome-api.raw: 
	* gtk/gtk-api-2.4.raw: 
	* gtk/gtk-api-2.6.raw: Regen, causing a few formerly-read-only
	properties to become writable.

2005-06-10  Mike Kestner  <mkestner@novell.com>

	* glade/XML.custom : add a try block on field autoconnect to make it
	easier to catch type mismatches and such.  Suggestion from Gonzalito.

2005-06-09  Lluis Sanchez  <lluis@novell.com>
