@@ -1,5 +1,11 @@
 2005-06-22  Mike Kestner  <mkestner@novell.com>
 
+	* sample/GladeTest.cs : add a menu item signal connect to test for the
+	problem described in bug#74946.
+	* sample/test.glade : add menubar.
+
+2005-06-22  Mike Kestner  <mkestner@novell.com>
+
 	* sample/GtkDemo/DemoHyperText.cs : replace PersistentData usage that
 	breaks on csc.
 	* sample/GtkDemo/DemoTreeStore.cs : fix a 2.0 usage.
